# flare-ai-rag

./: Dockerfile  nginx.conf  pyproject.toml  supervisord.conf
chat-ui/src/: App.js
src/flare_ai_rag/: __init__.py  bot_manager.py  compare.py  main.py  settings.py  tune_model.py
src/flare_ai_rag/ai/: __init__.py  base.py
src/flare_ai_rag/api/: demo.py
src/flare_ai_rag/api/routes/: chat.py
src/flare_ai_rag/config/: sources.py
src/flare_ai_rag/embeddings/: gemini_embeddings.py
src/flare_ai_rag/ingestion/: pipeline.py
src/flare_ai_rag/prompts/: __init__.py  library.py  schemas.py  templates.py
src/flare_ai_rag/retrieval/: advanced_retriever.py
src/flare_ai_rag/telegram/: service.py
src/flare_ai_rag/twitter/: service.py
