[project]
name = "flare-ai-rag"
version = "0.1.0"
description = "Enhanced RAG system for Flare Network"
authors = [
    { name = "Harmaton", email = "njagiiharmaton@gmail.com" }
]
readme = "README.md"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "qdrant-client>=1.7.0",
    "langchain>=0.0.350",
    "google-generativeai>=0.3.0",
    "numpy>=1.24.0",
    "pydantic>=2.5.2",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.40",
    "unstructured>=0.11.0",
    "markdown>=3.5.1",
    "beautifulsoup4>=4.12.2",
    "pandas>=2.1.3",
    "structlog>=23.1.0",
    "PyJWT>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pyright>=1.1.393",
    "ruff>=0.9.4",
]

[project.scripts]
start-backend = "flare_ai_rag.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
    "pytest>=7.4.3"
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "COM812", "D", "S105", "ANN401", "ISC003"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["S101", "ARG"]
"src/flare_ai_rag/router/prompts.py" = ["E501"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
pythonVersion = "3.12"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
disableBytesTypePromotions = true
reportUnusedClass = true
reportUnusedFunction = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportPrivateUsage = true
reportTypeCommentUsage = true
reportConstantRedefinition = true
reportDeprecated = true
reportInconsistentConstructor = true
reportUninitializedInstanceVariable = true
reportMissingParameterType = true
reportCallInDefaultInitializer = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportInvalidStubStatement = true
reportUnusedExpression = true
reportUnnecessaryTypeIgnoreComment = true
reportMatchNotExhaustive = true
reportImplicitOverride = true
reportShadowedImports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
